issue20 improve layout on small displays

--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -35,7 +35,7 @@ body {
     width: 100%;
     background: white;
     text-align: center;
-    padding-top: 1px;}
+    padding: 10px 0;}
     #container #home .nav {
       background: rgb(184, 219, 240);
       margin: 0;
@@ -185,10 +185,27 @@ div#footer {
   width:216px;
   margin-left:auto;
   margin-right:auto;
+  margin-top: 10px;
 }
 div#footer a {
   color: #0D5781;
 }
 .hidden {
   visibility: hidden;
+}
+iframe {
+  width: 100%;
+  height: 340px;
+}
+@media screen and (max-width: 1000px) {
+  #container {
+    *zoom: 1;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+  }
+  #container #home #intro .twocolumn {
+    display: inline;
+  }
 }
